@@ -3,8 +3,9 @@ Changes since 1.2.4:
  * support for running multi-threaded to reduce completion time on
    smp or multi-core machines.
  * several cleanups: the -lit and -force command line switches are
-   now ignored. removed several globals which have no real meaning
-   in the tool. removed some unused functions.
+   now ignored. failing to open an external definition file is now
+   treated as an error. removed several globals which have no real
+   meaning in the tool. removed some unused functions.
 
 2010-10-27 1.2.4 sezero
 Changes since 1.2.3:
